exports[`test converts a class mount with a pure function in it 1`] = `
<div
  className="class-with-pure class"
  onClick={[Function]}>
  <BasicPure
    className="nested-pure">
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      className="empty" />
  </BasicPure>
</div>
`;

exports[`test converts basic class shallow 1`] = `
<div
  className="basic-class class"
  onClick={[Function]}>
  <div
    className="group"
    id="group-id">
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      className="empty" />
  </div>
</div>
`;

exports[`test converts basic pure shallow 1`] = `
<div
  className="basic-pure pure"
  onClick={[Function]}>
  <div
    className="group"
    id="group-id">
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      className="empty" />
  </div>
</div>
`;

exports[`test handles a component which returns null 1`] = `null`;

exports[`test handles elements in prop arrays 1`] = `
<BasicPure
  elements={
    Array [
      <BasicPure>
        <strong>
            Hello!
        </strong>
    </BasicPure>,
    ]
  } />
`;

exports[`test handles elements in prop objects 1`] = `
<BasicPure
  element={
    Object {
      "element": <BasicPure>
        <strong>
            Hello!
        </strong>
    </BasicPure>,
      "nestedElements": Array [
        <BasicPure>
          <strong>
                Hello again!
          </strong>
    </BasicPure>,
      ],
    }
  } />
`;

exports[`test handles elements in props 1`] = `
<BasicPure
  element={
    <BasicPure>
      <strong>
        Hello!
      </strong>
    </BasicPure>
  } />
`;

exports[`test ignores non-plain objects 1`] = `
<BasicPure
  instance={
    TestConstructor {
      "_test": true,
    }
  } />
`;
